.opsera-claritywithai-0209/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: claritywithai-0209
  labels:
    app: claritywithai-0209
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: claritywithai-0209-dev.agent.opsera.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: claritywithai-0209
                port:
                  number: 80
